<resources>
    <string name="app_name">Tapadoo Programming Test</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="book_title">Title:</string>
    <string name="book_author">Author:</string>
    <string name="book_ISBN">ISBN:</string>
    <string name="book_price">Price:</string>
    <string name="book_id">ID:</string>
    <string name="refresh_list">Refresh</string>
    <string name="desc_id">Description:</string>
    <string name="loading">Loading...</string>
    <string name="refresh_menu_item">Refresh</string>
</resources>
