<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ajscanlan.tapadooprogrammingtest.view.BookActivity">


        <!--Title views-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--author views-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/author_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--ISBN views -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_ISBN"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/isbn_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--price views-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_price"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/price_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--ID views-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_id"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/id_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--Description views-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_id"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/desc_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



</ScrollView>
